--- a/SupplierPortal/Views/Home/Register.cshtml
+++ b/SupplierPortal/Views/Home/Register.cshtml
@@ -1,22 +1,27 @@
-﻿@{
+﻿@model SupplierPortal.Models.SupplierUser
+@{
     ViewBag.Title = "Register";
 }
 
-<form>
+@using (Html.BeginForm())
+{
     <div class="panel panel-default">
         <div class="panel-heading">
             供应商注册
         </div>
         <div class="panel-body">
             <div class="form-group">
-                <label for="fnumber" class="control-label">供应商编码</label>
-                <input type="text" class="form-control" id="fnumber" placeholder="请输入供应商编码">
-                <label for="fpassword" class="control-label">密码</label>
-                <input type="password" class="form-control" id="fpassword" placeholder="请输入密码">
-                <label for="fpasswordconfirm" class="control-label">确认密码</label>
-                <input type="password" class="form-control" id="fpasswordconfirm" placeholder="请输入密码">
+                @Html.LabelFor(m => m.Number)
+                @Html.TextBoxFor(m => m.Number, new { @class = "form-control" })
+                
+                @Html.LabelFor(m => m.Password)
+                @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+
+                <label for="passwordconfirm" class="control-label">确认密码</label>
+                <input type="password" class="form-control" id="passwordconfirm" placeholder="请输入密码">
             </div>
             <button type="submit" class="btn btn-default">注册</button>
         </div>
     </div>
-</form>
+}
+
