--- a/SupplierPortal/Views/Home/Register.cshtml
+++ b/SupplierPortal/Views/Home/Register.cshtml
@@ -11,14 +11,16 @@
         </div>
         <div class="panel-body">
             <div class="form-group">
-                @Html.LabelFor(m => m.Number)
-                @Html.TextBoxFor(m => m.Number, new { @class = "form-control" })
+                @Html.ValidationSummary()
+
+                @Html.LabelFor(m => m.Number)   
+                @Html.TextBoxFor(m => m.Number, new { @class = "form-control"})
                 
                 @Html.LabelFor(m => m.Password)
-                @Html.TextBoxFor(m => m.Password, new { @class = "form-control" })
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control"})
 
-                <label for="passwordconfirm" class="control-label">确认密码</label>
-                <input type="password" class="form-control" id="passwordconfirm" placeholder="请输入密码">
+                @Html.LabelFor(m => m.ConfirmPassword)
+                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control"})
             </div>
             <button type="submit" class="btn btn-default">注册</button>
         </div>
